# stop_loss_calculator

./: .env.example  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: main.py  schemas.py
app/application/: __init__.py
app/application/use_cases/: __init__.py  get_macd_minima.py  get_stop_loss.py
app/domain/: __init__.py
app/domain/models/: __init__.py
app/domain/repositories/: __init__.py  macd_calculator.py  price_data_repository.py
app/domain/services/: __init__.py  ema_macd_calculator.py  local_minima.py  macd_minima.py
app/infrastructure/: financialmodelingprep.py
app/infrastructure/adapters/: fmp_price_data_repository.py
app/interface/: deps.py  settings.py
docker/: Dockerfile
docs/: api.md  architecture.md  qa.md
scripts/: qa_batch.py  qa_plot_macd_minima.py  qa_plot_stop_loss.py
tests/: __init__.py  conftest.py  test_json_coercion.py  test_macd_minima_endpoint.py  test_main.py
tests/application/use_cases/: test_get_macd_minima.py  test_get_stop_loss.py
tests/domain/services/: test_local_minima.py  test_macd_minima.py
tests/infrastructure/: test_financialmodelingprep.py  test_local_minima.py  test_macd_minima.py  test_service_macd_minima_rows.py
tests/infrastructure/adapters/: test_fmp_price_data_repository.py
