[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stop_loss_calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
pandas = "^1.3.5"
requests = "^2.27.0"
pandas-ta = "^0.3.14-beta.0"
matplotlib = "^3.5.1"
python-dotenv = "^0.19.2"


[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = { version = "^5.9.3", extras = ["pyproject"]}
coverage = { version = "5.5", extras = ["toml"]}
pytest = "^6.2.5"
requests = "^2.26.0"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py39']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
line_length = 88
indent = '    '


[tool.coverage]
# https://github.com/nedbat/coveragepy
    [tool.coverage.run]

    source = ["app"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError"
    ]